force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Claim_Description__c.field-meta.xml
<CustomField>
    <fullName>Claim_Description__c</fullName>
    <label>Claim Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>