force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <label>Marketing Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Booth</fullName>
            </value>
            <value>
                <fullName>Conference Fees</fullName>
            </value>
            <value>
                <fullName>List Rental</fullName>
            </value>
            <value>
                <fullName>Printing Charges</fullName>
            </value>
            <value>
                <fullName>Promotional Goods</fullName>
            </value>
            <value>
                <fullName>Telemarketing Services</fullName>
            </value>
            <value>
                <fullName>Training Costs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>