force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Partial_Claim__c.field-meta.xml
<CustomField>
    <fullName>Partial_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used when submitting 1 of many claim against a request</description>
    <label>Partial Claim</label>
    <type>Checkbox</type>
</CustomField>