force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Performance_Verified__c.field-meta.xml
<CustomField>
    <fullName>Performance_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>POP verified</description>
    <label>Performance Verified</label>
    <type>Checkbox</type>
</CustomField>