force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Number</label>
    <referenceTo>SFDC_MDF__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>R00N50000001Q7A9EAK</relationshipName>
    <type>Lookup</type>
</CustomField>