force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Settlement_Method__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Method__c</fullName>
    <label>Settlement Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>